--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </scri
 			});
 		});
 		</script>
+<script src="cordova.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="wrap"> 			
